--- a/login.html
+++ b/login.html
@@ -1,201 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Secure Admin Login – St Paul</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Secure Admin Login – St Paul</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-  
-  <style>
-    body {
-      font-family: "Inter", sans-serif;
-      color: white;
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      overflow-x: hidden;
-      text-align: center;
-      background: linear-gradient(270deg, #0f172a, #1e293b, #2563eb, #60a5fa);
-      background-size: 800% 800%;
-      animation: gradientBG 20s ease infinite;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 
-    @keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+<style>
+  body {
+    font-family: "Inter", sans-serif;
+    color: white;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    overflow-x: hidden;
+    text-align: center;
+    background: linear-gradient(135deg, #0f172a, #1e293b);
+  }
 
-    /* Navbar */
-    .navbar {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 10px 20px;
-      background: linear-gradient(90deg, #1e3a8a, #2563eb);
-      position: sticky;
-      top: 0;
-      height: 60px;
-      z-index: 1000;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      position: relative;
-    }
+  /* Navbar */
+  .navbar {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    background: linear-gradient(90deg, #1e3a8a, #2563eb);
+    position: sticky;
+    top: 0;
+    height: 60px;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    position: relative;
+  }
 
-    /* Hamburger */
-    #menu-toggle {
-      background: none;
-      border: none;
-      cursor: pointer;
-      padding: 10px;
-      margin-right: 20px;
-      z-index: 2001;
-    }
+  /* Hamburger */
+  #menu-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    margin-right: 20px;
+    z-index: 2001;
+  }
 
-    .hamburger-icon {
-      width: 25px;
-      height: 3px;
-      background-color: white;
-      margin: 4px 0;
-      transition: 0.4s;
-      border-radius: 2px;
-      box-shadow: 0 0 5px #60a5fa;
-    }
+  .hamburger-icon {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 4px 0;
+    transition: 0.4s;
+    border-radius: 2px;
+  }
 
-    .change .bar1 {
-      transform: translateY(7px) rotate(-45deg);
-    }
-    .change .bar2 { opacity: 0; }
-    .change .bar3 { transform: translateY(-7px) rotate(45deg); }
+  .change .bar1 { transform: translateY(7px) rotate(-45deg); }
+  .change .bar2 { opacity: 0; }
+  .change .bar3 { transform: translateY(-7px) rotate(45deg); }
 
-    /* Centered logo */
-    .logo-container {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    .logo-link {
-      display: flex;
-      align-items: center;
-    }
-    .school-logo {
-      width: 120px;
-      border-radius: 50%;
-      border: 2px solid white;
-    }
-    @media (max-width: 768px) { .school-logo { width: 100px; } }
+  /* Centered logo */
+  .logo-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .logo-link {
+    display: flex;
+    align-items: center;
+  }
+  .school-logo {
+    width: 120px;
+    border-radius: 50%;
+    border: 2px solid white;
+  }
 
-    /* Sidebar */
-    .side-menu {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: #1e3a8a;
-      overflow-x: hidden;
-      transition: width 0.4s ease;
-      padding-top: 80px;
-      box-shadow: 2px 0 12px rgba(0,0,0,0.5);
-      z-index: 2000;
-    }
-    .side-menu a {
-      display: block;
-      padding: 12px 30px;
-      text-decoration: none;
-      color: white;
-      font-size: 1rem;
-      font-weight: 500;
-      transition: 0.3s;
-      text-shadow: 0 0 5px #60a5fa;
-    }
-    .side-menu a:hover {
-      background: #2563eb;
-      padding-left: 40px;
-      text-shadow: 0 0 15px #93c5fd;
-    }
+  /* Sidebar */
+  .side-menu {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #1e3a8a;
+    overflow-x: hidden;
+    transition: width 0.4s ease;
+    padding-top: 80px;
+    box-shadow: 2px 0 12px rgba(0,0,0,0.5);
+    z-index: 2000;
+  }
+  .side-menu a {
+    display: block;
+    padding: 12px 30px;
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .side-menu a:hover { background: #2563eb; padding-left: 40px; }
 
-    /* Main content */
-    #main-content-wrapper { transition: transform 0.4s ease; }
+  #main-content-wrapper { transition: transform 0.4s ease; }
 
-    header {
-      background: none;
-      padding: 25px 0 10px;
-      box-shadow: none;
-    }
-    h1 { margin: 0; font-size: 2.5rem; color: #60a5fa; text-shadow: 0 0 10px #60a5fa, 0 0 20px #3b82f6; }
-    p { margin-top: 5px; font-size: 1.1em; color: #93c5fd; }
+  header {
+    background: none;
+    padding: 25px 0 10px;
+  }
+  h1 { margin: 0; font-size: 2.5rem; color: #60a5fa; }
+  p { margin-top: 5px; font-size: 1.1em; color: #93c5fd; }
 
-    section {
-      max-width: 420px;
-      margin: 40px auto;
-      padding: 30px;
-      background: rgba(30, 41, 59, 0.7);
-      border: 1px solid #3b82f6;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #2563eb, 0 0 25px rgba(0,0,0,0.5);
-      backdrop-filter: blur(5px);
-      animation: fadeIn 1s ease-in-out;
-    }
+  section {
+    max-width: 420px;
+    margin: 40px auto;
+    padding: 30px;
+    background: rgba(30, 41, 59, 0.7);
+    border: 1px solid #3b82f6;
+    border-radius: 12px;
+    box-shadow: 0 0 15px #2563eb;
+    backdrop-filter: blur(5px);
+  }
 
-    h2 { color: #93c5fd; text-shadow: 0 0 5px #60a5fa; }
-    label { text-align: left; font-weight: 500; margin-bottom: 5px; color: #cbd5e1; }
-    input[type="email"], input[type="password"] {
-      width: 100%; padding: 8px; margin-bottom: 12px;
-      background-color: rgba(255,255,255,0.1); color: white;
-      border: 1px solid #60a5fa; border-radius: 6px;
-    }
-    input::placeholder { color: #a0a0a0; }
-    button {
-      padding: 12px 15px; border-radius: 8px; font-weight: 600;
-      transition: 0.3s, transform 0.3s; box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      width: 100%; margin-bottom: 10px; cursor: pointer;
-    }
-    button[type="submit"] { background-color: #2563eb; box-shadow: 0 0 10px #2563eb; }
-    button[type="submit"]:hover { background-color: #3b82f6; box-shadow: 0 0 15px #60a5fa; transform: scale(1.03); }
-    #googleLoginBtn { background-color: #db4437; }
-    #googleLoginBtn:hover { background-color: #c33227; transform: scale(1.03); }
+  input[type="email"], input[type="password"] {
+    width: 100%; padding: 8px; margin-bottom: 12px;
+    background-color: rgba(255,255,255,0.1); color: white;
+    border: 1px solid #60a5fa; border-radius: 6px;
+  }
+  input::placeholder { color: #a0a0a0; }
 
-    .error-message { color: #fca5a5; font-size: 0.9em; margin-bottom: 10px; }
+  button {
+    padding: 12px 15px; border-radius: 8px; font-weight: 600;
+    transition: 0.3s, transform 0.3s; width: 100%; margin-bottom: 10px; cursor: pointer;
+  }
+  button[type="submit"] { background-color: #2563eb; }
+  button[type="submit"]:hover { background-color: #3b82f6; transform: scale(1.03); }
+  #googleLoginBtn { background-color: #db4437; }
+  #googleLoginBtn:hover { background-color: #c33227; transform: scale(1.03); }
 
-    @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
-  </style>
+  .error-message { color: #fca5a5; font-size: 0.9em; margin-bottom: 10px; }
+</style>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
-      authDomain: "my-school-st-paul-1455a.firebaseapp.com",
-      projectId: "my-school-st-paul-1455a",
-      storageBucket: "my-school-st-paul-1455a.appspot.com",
-      appId: "1:951593545268:web:ed6ff256b523c29f8d48bb"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const googleProvider = new GoogleAuthProvider();
+const firebaseConfig = {
+  apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+  authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+  projectId: "my-school-st-paul-1455a",
+  storageBucket: "my-school-st-paul-1455a.appspot.com",
+  appId: "1:951593545268:web:ed6ff256b523c29f8d48bb"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const googleProvider = new GoogleAuthProvider();
 
-    const adminEmail = atob("bmljaG9sYXNiYWdlbmRhQGdtYWlsLmNvbQ==");
+const adminEmail = atob("bmljaG9sYXNiYWdlbmRhQGdtYWlsLmNvbQ==");
 
-    function checkAdminAccess(user) {
-      const userEmail = user.email ? user.email.trim().toLowerCase() : null;
-      if(userEmail === adminEmail.toLowerCase()) {
-        // Redirect to teacher-resources.html after login
-        window.location.href = "teacher-resources.html";
-      } else {
-        alert("⛔ Access Denied. Unauthorized email.");
-      }
-    }
+function checkAdminAccess(user){
+  const userEmail = user.email?.trim().toLowerCase();
+  if(userEmail === adminEmail.toLowerCase()){
+    window.location.href = "teacher-resources.html";
+  } else {
+    alert("⛔ Access Denied. Unauthorized email.");
+  }
+}
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const loginForm = document.getElementById("loginForm");
-      const googleBtn = document.getElementById("googleLoginBtn");
-      const errorMsg = document.getElementById("errorMsg");
+document.addEventListener("DOMContentLoaded", ()=>{
+  const loginForm = document.getElementById("loginForm");
+  const googleBtn = document.getElementById("googleLoginBtn");
+  const errorMsg = document.getElementById("errorMsg");
 
-      loginForm.addEventListener("submit", e => {
-        e.preventDefault();
-        const email = document.getElementById("email").value.trim().toLowerCase();
-        const password = document.getElementById("password").value;
-        signInWithEmailAndPassword(auth, email, password)
-          .then(user
+  loginForm.addEventListener("submit", e=>{
+    e.preventDefault();
+    const email = document.getElementById("email").value.trim().toLowerCase();
+    const password = document.getElementById("password").value;
+    signInWithEmailAndPassword(auth,email,password)
+      .then(userCred=>checkAdminAccess(userCred.user))
+      .catch(err=>errorMsg.textContent="⚠️ "+err.message);
+  });
+
+  googleBtn.addEventListener("click", ()=>{
+    signInWithPopup(auth,googleProvider)
+      .then(result=>checkAdminAccess(result.user))
+      .catch(err=>errorMsg.textContent="⚠️ Google sign-in failed: "+err.message);
+  });
+});
+
+// Sidebar toggle
+function toggleMenu(){
+  const sideMenu=document.getElementById("sideMenu");
+  const toggle=document.getElementById("menu-toggle");
+  if(sideMenu.style.width==="260px"){sideMenu.style.width="0"; toggle.classList.remove("change");}
+  else{sideMenu.style.width="260px"; toggle.classList.add("change");}
+}
+document.addEventListener('keydown', e=>{if(e.key==="Escape"){document.getElementById("sideMenu").style.width="0";document.getElementById("menu-toggle").classList.remove("change");}});
+</script>
+
+</head>
+<body>
+
+<div class="navbar">
+  <button id="menu-toggle" onclick="toggleMenu()">
+    <div class="hamburger-icon bar1"></div>
+    <div class="hamburger-icon bar2"></div>
+    <div class="hamburger-icon bar3"></div>
+  </button>
+  <div class="logo-container">
+    <a href="https://nicholasbagenda.netlify.app" target="_blank" class="logo-link">
+      <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+    </a>
+  </div>
+</div>
+
+<nav id="sideMenu" class="side-menu">
+  <a href="index.html">🌐 Public Homepage</a>
+  <a href="#loginSection" onclick="toggleMenu()">🔒 Admin Login</a>
+  <hr style="border-top:1px solid #3b82f6;width:80%;margin:15px auto;">
+  <a href="#" onclick="alert('Login required.')">👤 User Management</a>
+  <a href="#" onclick="alert('Login required.')">⚙️ Site Settings</a>
+</nav>
+
+<div id="main-content-wrapper">
+  <header>
+    <h1>St Paul Learning Centre</h1>
+    <p>Restricted Access – Admin Only</p>
+  </header>
+
+  <section id="loginSection">
+    <h2>Admin Login</h2>
+    <form id="loginForm" novalidate>
+      <div id="errorMsg" class="error-message"></div>
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter admin email" required>
+      <label for="password">Password</label>
+      <input type="password" id="password" placeholder="Enter password" required value="tebakya&bagenda246">
+      <label><input type="checkbox" checked> Remember Me</label>
+      <button type="submit">Login with Email/Password</button>
+    </form>
+    <hr style="margin:20px 0;border-top:1px solid #3b82f6;">
+    <button id="googleLoginBtn">Sign in with Google</button>
+  </section>
+</div>
+
+</body>
+</html>
