--- a/login.html
+++ b/login.html
@@ -86,15 +86,35 @@
     box-shadow: 2px 0 12px rgba(0,0,0,0.5);
     z-index: 2000;
   }
+
+  .side-menu.open {
+    width: 260px;
+  }
+
+  .side-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .side-menu li {
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+  }
+
   .side-menu a {
     display: block;
-    padding: 12px 30px;
+    padding: 14px 35px;
     text-decoration: none;
     color: white;
     font-size: 1rem;
     font-weight: 500;
+    transition: 0.3s;
   }
-  .side-menu a:hover { background: #2563eb; padding-left: 40px; }
+
+  .side-menu a:hover {
+    background: #2563eb;
+    padding-left: 45px;
+  }
 
   #main-content-wrapper { transition: transform 0.4s ease; }
 
@@ -186,10 +206,16 @@ document.addEventListener("DOMContentLoaded", ()=>{
 function toggleMenu(){
   const sideMenu=document.getElementById("sideMenu");
   const toggle=document.getElementById("menu-toggle");
-  if(sideMenu.style.width==="260px"){sideMenu.style.width="0"; toggle.classList.remove("change");}
-  else{sideMenu.style.width="260px"; toggle.classList.add("change");}
+  sideMenu.classList.toggle("open");
+  toggle.classList.toggle("change");
 }
-document.addEventListener('keydown', e=>{if(e.key==="Escape"){document.getElementById("sideMenu").style.width="0";document.getElementById("menu-toggle").classList.remove("change");}});
+
+document.addEventListener('keydown', e=>{
+  if(e.key==="Escape"){
+    document.getElementById("sideMenu").classList.remove("open");
+    document.getElementById("menu-toggle").classList.remove("change");
+  }
+});
 </script>
 
 </head>
@@ -208,12 +234,16 @@ document.addEventListener('keydown', e=>{if(e.key==="Escape"){document.getElemen
   </div>
 </div>
 
+<!-- Sidebar Menu -->
 <nav id="sideMenu" class="side-menu">
-  <a href="index.html">🌐 Public Homepage</a>
-  <a href="#loginSection" onclick="toggleMenu()">🔒 Admin Login</a>
-  <hr style="border-top:1px solid #3b82f6;width:80%;margin:15px auto;">
-  <a href="#" onclick="alert('Login required.')">👤 User Management</a>
-  <a href="#" onclick="alert('Login required.')">⚙️ Site Settings</a>
+  <ul>
+    <li><a href="index.html">🏠 Public Homepage</a></li>
+    <li><a href="#loginSection" onclick="toggleMenu()">🔐 Admin Login</a></li>
+    <li><a href="resources.html">📂 Teacher Resources</a></li>
+    <li><a href="#" onclick="alert('User Management requires login.')">👤 User Management</a></li>
+    <li><a href="#" onclick="alert('Site Settings requires login.')">⚙️ Site Settings</a></li>
+    <li><a href="mailto:nicholasbagenda@gmail.com">📧 Contact Support</a></li>
+  </ul>
 </nav>
 
 <div id="main-content-wrapper">
@@ -239,4 +269,4 @@ document.addEventListener('keydown', e=>{if(e.key==="Escape"){document.getElemen
 </div>
 
 </body>
-</html>
+      </html>
